test/error/unterminated_comment_footer.true
File 0, line 4, col 1:
unterminated comment

